<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/layout_margin_bottom_text"
            android:text="@string/bacchus_4"
            android:textSize="@dimen/bacchus_name_text"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="@dimen/bacchus_layout_width"
            android:layout_height="@dimen/bacchus_layout_height"
            android:layout_marginBottom="@dimen/layout_margin_bottom_text"
            android:scaleType="centerCrop"
            android:src="@drawable/image_4" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/bacchus_description"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/layout_margin_bottom_text"
            android:text="@string/bacchus_4_description" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/bacchus_author"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/layout_margin_bottom_text"
            android:text="@string/bacchus_4_author" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/bacchus_founder"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/layout_margin_bottom_text"
            android:text="@string/bacchus_4_founder" />
    </TableLayout>
</ScrollView>